<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ui.BalanceFragment">

    <TextView
        android:id="@+id/currentBalance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_show_balance"
        android:textSize="36sp" />

    <TextView
        android:id="@+id/showBalance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_ruble"
        android:textSize="36sp" />

    <Button
        android:id="@+id/btnBack"
        android:layout_width="250dp"
        android:layout_height="70dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="#0A80F5"
        android:text="@string/btn_back" />

</LinearLayout>