<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ui.StartFragment">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/logo" />

    <TextView
        android:id="@+id/tvChooseOperation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/choose_action"
        android:textSize="32sp" />

    <Button
        android:id="@+id/btnGetCash"
        android:layout_width="250dp"
        android:layout_height="70dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="#0A80F5"
        android:text="@string/get_cash"
        android:textSize="16sp" />

    <Button
        android:id="@+id/btnGetBalance"
        android:layout_width="250dp"
        android:layout_height="70dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="#0A80F5"
        android:text="@string/get_balance"
        android:textSize="16sp" />

</LinearLayout>